--- a/data/web/client/package.json
+++ b/data/web/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage":"./",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
